Eerste deel HTML

--- a/views/Quiz.ejs
+++ b/views/Quiz.ejs
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The One | Gremlins</title>
+    <title>The One/Guiz | Gremlins</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <h1>The One home</h1>
-    <img src="../public/Content/LogoLOTR.png" alt="Logo">
+    <h1>The One Quiz</h1>
+    <img src="Content/LogoLOTR" alt="Logo">
     <nav>
         <ul class="LOTR_Nav">
             <li><a href="" class="">Home</a></li>
@@ -19,9 +19,5 @@
             <li><a href="" class="">Blacklist</a></li>
         <ul>
     </nav>
-
-    <h2>Welcome</h2>
-    
-    <p>In a hole in the ground there lived a hobbit. Not a nasty, dirty, wet hole, filled with the ends of worms and an oozy smell, nor yet a dry, bare, sandy hole with nothing in it to sit down on or to eat: it was a hobbit-hole, and that means comfort.</p>
 </body>
 </html>
