--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>The One home</h1>
-    <img src="../public/Content/LogoLOTR.png" alt="Logo">
+    <img src="content/LogoLOTR.png" alt="Logo" title="">
     <nav>
         <ul class="LOTR_Nav">
             <li><a href="" class="">Home</a></li>
