--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,15 +13,19 @@
     <img src="content/LogoLOTR.png" alt="Logo" title="">
     <nav>
         <ul class="LOTR_Nav">
-            <li><a href="" class="">Home</a></li>
-            <li><a href="" class="">Quiz</a></li>
-            <li><a href="" class="">Favorites</a></li>
-            <li><a href="" class="">Blacklist</a></li>
+            <li><a href="./index.ejs" class="">Home</a></li>
+            <li><a href="./Quiz.ejs" class="">Quiz</a></li>
+            <li><a href="./Favorites.ejs" class="">Favorites</a></li>
+            <li><a href="./Blacklist.ejs" class="">Blacklist</a></li>
         <ul>
     </nav>
 
-    <h2>Welcome</h2>
-    
-    <p>In a hole in the ground there lived a hobbit. Not a nasty, dirty, wet hole, filled with the ends of worms and an oozy smell, nor yet a dry, bare, sandy hole with nothing in it to sit down on or to eat: it was a hobbit-hole, and that means comfort.</p>
+    <main>
+        <h2>Welcome</h2>
+        <p>In a hole in the ground there lived a hobbit. Not a nasty, dirty, wet hole, filled with the ends of worms and an oozy smell, nor yet a dry, bare, sandy hole with nothing in it to sit down on or to eat: it was a hobbit-hole, and that means comfort.</p>
+        <p>Deze quiz is gemaakt door de Gremlins. Wij zijn een groep studenten van AP Hoge School in Antwerpen.</p>
+        <p>We hebben een quiz gemaakt over quotes uit de films van The Lord Of The Rings. Deze auotes moeten gelinked worden aan het juiste karakter en aan de juiste film.</p>
+    </main>
+
 </body>
 </html>
