--- a/views/Blacklist.ejs
+++ b/views/Blacklist.ejs
@@ -13,13 +13,13 @@
     <img src="Content/LogoLOTR" alt="Logo">
     <nav>
         <ul class="LOTR_Nav">
-            <li><a href="" class="">Home</a></li>
-            <li><a href="" class="">Quiz</a></li>
-            <li><a href="" class="">Favorites</a></li>
-            <li><a href="" class="">Blacklist</a></li>
+            <li><a href="./index.ejs" class="">Home</a></li>
+            <li><a href="./Quiz.ejs" class="">Quiz</a></li>
+            <li><a href="./Favorites.ejs" class="">Favorites</a></li>
+            <li><a href="./Blacklist.ejs" class="">Blacklist</a></li>
         <ul>
     </nav>
 
-    
+
 </body>
 </html>
