--- a/views/Favorites.ejs
+++ b/views/Favorites.ejs
@@ -13,11 +13,18 @@
     <img src="Content/LogoLOTR" alt="Logo">
     <nav>
         <ul class="LOTR_Nav">
-            <li><a href="" class="">Home</a></li>
-            <li><a href="" class="">Quiz</a></li>
-            <li><a href="" class="">Favorites</a></li>
-            <li><a href="" class="">Blacklist</a></li>
+            <li><a href="./index.ejs" class="">Home</a></li>
+            <li><a href="./Quiz.ejs" class="">Quiz</a></li>
+            <li><a href="./Favorites.ejs" class="">Favorites</a></li>
+            <li><a href="./Blacklist.ejs" class="">Blacklist</a></li>
         <ul>
     </nav>
+
+    <Main>
+        <p>Hier vind u een lijst met de favoriete quotes.</p>
+        <ul>Dit zijn alle Favoriete quotes:
+            <li><p>You shall not pass - <a href="https://lotr.fandom.com/wiki/Gandalf">Gandalf</a></p></li>
+        </ul>
+    </Main>
 </body>
 </html>
