--- a/views/Favorites.ejs
+++ b/views/Favorites.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
     <h1>The One Favorites</h1>
     <img src="Content/LogoLOTR" alt="Logo">
@@ -17,14 +19,17 @@
             <li><a href="./Quiz.ejs" class="">Quiz</a></li>
             <li><a href="./Favorites.ejs" class="">Favorites</a></li>
             <li><a href="./Blacklist.ejs" class="">Blacklist</a></li>
-        <ul>
+            <ul>
     </nav>
 
     <Main>
         <p>Hier vind u een lijst met de favoriete quotes.</p>
         <ul>Dit zijn alle Favoriete quotes:
-            <li><p>You shall not pass - <a href="https://lotr.fandom.com/wiki/Gandalf">Gandalf</a></p></li>
+            <li>
+                <p>You shall not pass - <a href="https://lotr.fandom.com/wiki/Gandalf">Gandalf</a></p>
+            </li>
         </ul>
     </Main>
 </body>
+
 </html>
