--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -16,9 +16,9 @@
     <nav>
         <ul class="LOTR_Nav">
             <li><a href="./index.ejs" class="">Home</a></li>
-            <li><a href="./Quiz.ejs" class="">Quiz</a></li>
-            <li><a href="./Favorites.ejs" class="">Favorites</a></li>
-            <li><a href="./Blacklist.ejs" class="">Blacklist</a></li>
+            <li><a href="./quiz.ejs" class="">Quiz</a></li>
+            <li><a href="./favorites.ejs" class="">Favorites</a></li>
+            <li><a href="./blacklist.ejs" class="">Blacklist</a></li>
             <ul>
     </nav>
 
