--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -22,14 +22,14 @@
             <ul>
     </nav>
 
-    <Main>
+    <main>
         <p>Hier vind u een lijst met de favoriete quotes.</p>
         <ul>Dit zijn alle Favoriete quotes:
             <li>
                 <p>You shall not pass - <a href="https://lotr.fandom.com/wiki/Gandalf">Gandalf</a></p>
             </li>
         </ul>
-    </Main>
+    </main>
 </body>
 
 </html>
