--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -12,7 +12,7 @@
 
 <body>
     <h1>The One Favorites</h1>
-    <img src="Content/LogoLOTR" alt="Logo">
+    <img src="content/logoLOTR" alt="Logo">
     <nav>
         <ul class="LOTR_Nav">
             <li><a href="./index.ejs" class="">Home</a></li>
