--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 
 <body>
     <h1>The One home</h1>
-    <img src="content/LogoLOTR.png" alt="Logo" title="">
+    <img src="content/logoLOTR.png" alt="Logo" title="">
     <nav>
         <ul class="LOTR_Nav">
             <li><a href="./index.ejs" class="">Home</a></li>
