--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -12,7 +12,7 @@
 
 <body>
     <h1>The One Quiz</h1>
-    <img src="content/logoLOTR" alt="Logo">
+    <img src="assets/images/logoLOTR.png" alt="Logo">
     <nav>
         <ul class="LOTR_Nav">
             <li><a href="./index.ejs" class="">Home</a></li>
