--- a/views/blacklist.ejs
+++ b/views/blacklist.ejs
@@ -15,10 +15,10 @@
     <img src="assets/images/logoLOTR.png" alt="Logo">
     <nav>
         <ul class="LOTR_Nav">
-            <li><a href="./index.ejs" class="">Home</a></li>
-            <li><a href="./quiz.ejs" class="">Quiz</a></li>
-            <li><a href="./favorites.ejs" class="">Favorites</a></li>
-            <li><a href="./blacklist.ejs" class="">Blacklist</a></li>
+            <li><a href="./index" class="">Home</a></li>
+            <li><a href="./quiz" class="">Quiz</a></li>
+            <li><a href="./favorites" class="">Favorites</a></li>
+            <li><a href="./blacklist" class="">Blacklist</a></li>
             <ul>
     </nav>
 
