--- a/views/blacklist.ejs
+++ b/views/blacklist.ejs
@@ -15,7 +15,7 @@
     <img src="assets/images/logoLOTR.png" alt="Logo">
     <nav>
         <ul class="LOTR_Nav">
-            <li><a href="./index" class="">Home</a></li>
+            <li><a href="./" class="">Home</a></li>
             <li><a href="./quiz" class="">Quiz</a></li>
             <li><a href="./favorites" class="">Favorites</a></li>
             <li><a href="./blacklist" class="">Blacklist</a></li>
