Header is nu een partial (1 file voor alle headers)

--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -12,24 +12,16 @@
 
 <body>
     <h1>The One Favorites</h1>
-    <img src="assets/images/logoLOTR.png" alt="Logo">
-    <nav>
-        <ul class="LOTR_Nav">
-            <li><a href="./" class="">Home</a></li>
-            <li><a href="./quiz" class="">Quiz</a></li>
-            <li><a href="./favorites" class="">Favorites</a></li>
-            <li><a href="./blacklist" class="">Blacklist</a></li>
-            <ul>
-    </nav>
+    <%- include('./partial/header.ejs') %>
 
-    <main>
-        <p>Hier vind u een lijst met de favoriete quotes.</p>
-        <ul>Dit zijn alle Favoriete quotes:
-            <li>
-                <p>You shall not pass - <a href="https://lotr.fandom.com/wiki/Gandalf">Gandalf</a></p>
-            </li>
-        </ul>
-    </main>
+        <main>
+            <p>Hier vind u een lijst met de favoriete quotes.</p>
+            <ul>Dit zijn alle Favoriete quotes:
+                <li>
+                    <p>You shall not pass - <a href="https://lotr.fandom.com/wiki/Gandalf">Gandalf</a></p>
+                </li>
+            </ul>
+        </main>
 </body>
 
 </html>
