--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -12,19 +12,12 @@
 
 <body>
     <h1>The One Quiz</h1>
-    <img src="assets/images/logoLOTR.png" alt="Logo">
-    <nav>
-        <ul class="LOTR_Nav">
-            <li><a href="./" class="">Home</a></li>
-            <li><a href="./quiz" class="">Quiz</a></li>
-            <li><a href="./favorites" class="">Favorites</a></li>
-            <li><a href="./blacklist" class="">Blacklist</a></li>
-            <ul>
-    </nav>
+    <%- include('./partial/header.ejs') %>
 
-    <main>
 
-    </main>
+        <main>
+
+        </main>
 </body>
 
 </html>
