--- a/views/blacklist.ejs
+++ b/views/blacklist.ejs
@@ -12,15 +12,7 @@
 
 <body>
     <h1>The One Blacklist</h1>
-    <img src="assets/images/logoLOTR.png" alt="Logo">
-    <nav>
-        <ul class="LOTR_Nav">
-            <li><a href="./" class="">Home</a></li>
-            <li><a href="./quiz" class="">Quiz</a></li>
-            <li><a href="./favorites" class="">Favorites</a></li>
-            <li><a href="./blacklist" class="">Blacklist</a></li>
-            <ul>
-    </nav>
+    <%- include('./partial/header.ejs') %>
 </body>
 
 </html>
