Templates (doe: npm i)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,31 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The One | Gremlins</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/main.css">
-</head>
-
-<body>
-    <h1>The One home</h1>
-    <%- include('./partial/header.ejs') %>
-
-        <main>
-            <h2>Welcome</h2>
-            <p>In a hole in the ground there lived a hobbit. Not a nasty, dirty, wet hole, filled with the ends of worms
-                and
-                an oozy smell, nor yet a dry, bare, sandy hole with nothing in it to sit down on or to eat: it was a
-                hobbit-hole, and that means comfort.</p>
-            <p>Deze quiz is gemaakt door de Gremlins. Wij zijn een groep studenten van AP Hoge School in Antwerpen.</p>
-            <p>We hebben een quiz gemaakt over quotes uit de films van The Lord Of The Rings. Deze auotes moeten
-                gelinked
-                worden aan het juiste karakter en aan de juiste film.</p>
-        </main>
-
-</body>
-
-</html>
+<main>
+    <h2>Welcome</h2>
+    <p>In a hole in the ground there lived a hobbit. Not a nasty, dirty, wet hole, filled with the ends of worms and an oozy smell, nor yet a dry, bare, sandy hole with nothing in it to sit down on or to eat: it was a hobbit-hole, and that means comfort.</p>
+    <p>Deze quiz is gemaakt door de Gremlins. Wij zijn een groep studenten van AP Hoge School in Antwerpen.</p>
+    <p>We hebben een quiz gemaakt over quotes uit de films van The Lord Of The Rings. Deze auotes moeten gelinked worden aan het juiste karakter en aan de juiste film.</p>
+</main>
