--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -1,8 +1,6 @@
 <main>
-    <p>Hier vind u een lijst met de favoriete quotes.</p>
+    <img src="assets/images/favorite-quotes.jpg" alt="Logo">
     <ul>Dit zijn alle Favoriete quotes:
-        <li>
-            <p>You shall not pass - <a href="https://lotr.fandom.com/wiki/Gandalf">Gandalf</a></p>
-        </li>
+        <li><blockquote>“You shall not pass” - <a href="https://lotr.fandom.com/wiki/Gandalf">Gandalf</a></blockquote></li>
     </ul>
 </main>
