--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -1,5 +1,8 @@
 <main id="quiz-page">
     <div class="quiz-box">
         <h1>Question</h1>
+        <p>Vraag:</p>
+        <br>
+        <input type="image" src="assets/images/like.png" height="25"/> <input type="image" src="assets/images/dislike.png" height="25"/> 
     </div>
 </main>
