--- a/views/blacklist.ejs
+++ b/views/blacklist.ejs
@@ -1,4 +1,5 @@
  <main>
+         <h1>Blacklist</h1>
         <ul>
         <li><blockquote>“So many books, so little time.”</blockquote></li>
         <li><blockquote>“A room without books is like a body without a soul.”</blockquote></li>
