--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -6,7 +6,7 @@
                 </strong></h1>
             <section class="answer-panel"></section>
 
-            <h2>Characters</h2>
+            <h2>Character:</h2>
             <form action="/quiz" method="post" class="character-panel">
                 <% possibleCharacters.forEach(element=> { %>
 
@@ -16,7 +16,7 @@
                     <% }); %>
     
 
-            <h2>Movies</h2>
+            <h2>Movie:</h2>
     
                 <% possibleMovies.forEach(element=> { %>
                    
