--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,2 +1,3 @@
-
-<img src="assets/images/lost.jpg" alt="" height="600" width="600">
+<main>
+    <img src="assets/images/lost.jpg" alt="" height="600" width="600">
+</main>
