--- a/views/quiz-begin.ejs
+++ b/views/quiz-begin.ejs
@@ -1,8 +1,18 @@
 <main id="quiz-page">
     <div class="quiz-box">
-        <form action="/quiz" method="post">
+        <section class="quiz-head">
+            <h1>The One Quiz</h1>
+        </section>
+
+        <section class="quiz-main">
+        <form action="/quiz" method="post" class="start-quiz">
             <input type="hidden" value="true" name="startQuiz" />
-            <button type="submit" class="start-quiz-btn">START QUIZ</button>
+            <button type="submit" class="">START QUIZ</button>
         </form>
+        </section>
+
+        <section class="quiz-footer">
+        
+        </section>
     </div>
 </main>
