--- a/views/quiz-active.ejs
+++ b/views/quiz-active.ejs
@@ -1,45 +1,36 @@
 <main id="quiz-page">
     <div class="quiz-box">
-            <h1 class="quiz-title">Quote: <strong>
-                    <%- question %>
-                </strong></h1>
-            <h2 class="quiz-score">Score: <br>
-                <%- score %>
-            </h2>
+        <section class="quiz-head">
+            <h1>The One Quiz</h1>
+            <form action="/quiz" method="post">
+                <input type="hidden" name="reset" value="true">
+                <input type="submit" value="RESET">
+            </form>
+        </section>
 
-            <section class="answer-panel">
+        <section class="quiz-main">
+          <cite><h1><%- questionIndex %>. <%- question %></h1></cite>
+          <section class="quiz-answers">
+              <div class="quiz-answers-left">
+                  <h1>Character:</h1>
+                  <% possibleCharacters.forEach(character=> { %>
+                  <div class="quiz-character-option"><h2><%- character.name %></h2></div>
+                  <% }); %>
+              </div>
+              <div class="quiz-answers-right">
+                  <h1>Movie:</h1>
+                  <% possibleMovies.forEach(movie=> { %>
+                  <div class="quiz-movie-option"><h2><%- movie.name %></h2></div>
+                  <% }); %>
+              </div>
+          </section>
+        </section>
 
-                <h2>Character:</h2>
-                <form action="/quiz" method="post" class="character-panel">
-                    <% possibleCharacters.forEach(element=> { %>
-
-                        <label for="<%- element.name %>">
-                            <%- element.name %>
-                        </label>
-                        <input type="radio" id="<%- element.name %>" name="character" value="<%- element.name %>">
-
-                        <% }); %>
-
-
-                            <h2>Movie:</h2>
-
-                            <% possibleMovies.forEach(element=> { %>
-
-                                <label for="<%- element.name %>">
-                                    <%- element.name %>
-                                </label>
-                                <input type="radio" id="<%- element.name %>" name="movie" value="<%- element.name %>">
-
-                                <% }); %>
-                                    <input type="submit" value="Send In">
-                </form>
-            </section>
-
-            <section class="quiz-likepanel">
-                <form action="/quiz" method="post">
-                    <input type="image" src="assets/images/like.png" height="25" />
-                    <input type="image" src="assets/images/dislike.png" height="25" />
-                </form>
-            </section>        
+        <section class="quiz-footer">
+            <h2><%- questionIndex %> of <%- questionIndexMax %>  Questions</h2>
+            <form action="/quiz" method="post">
+                <button type="submit">Next Question</button>
+            </form>
+        </section>
     </div>
 </main>
