--- a/views/quiz-begin.ejs
+++ b/views/quiz-begin.ejs
@@ -5,14 +5,14 @@
         </section>
 
         <section class="quiz-main">
-        <form action="/quiz" method="post" class="start-quiz">
-            <input type="hidden" value="true" name="startQuiz" />
-            <button type="submit" class="">START QUIZ</button>
-        </form>
+            <form action="/quiz" method="post" class="start-quiz">
+                <input type="hidden" value="true" name="startQuiz" />
+                <button type="submit" class="">START QUIZ</button>
+            </form>
         </section>
 
-        <section class="quiz-footer">
-        
+        <section class="quiz-footer" style="display: block; text-align: center;">
+            <h2>The ultimate quiz!</h2>
         </section>
     </div>
 </main>
