--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -11,10 +11,12 @@ html, body {
 
 .flex {
     display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .evenspace {
-    justify-content: space-evebbnly;
+    justify-content: space-between;
 }
 
 body {
@@ -149,7 +151,7 @@ footer {
     background-color: rgba(255, 0, 0, 0.672);
 }
 
-.quiz-main .quiz-answers div {
+.quiz-main .quiz-answers > div {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -167,6 +169,9 @@ footer {
     margin-top: 0.3rem;
     width: 90%;
     cursor: pointer;
+}
+.quiz-main .quiz-answers div > div h2 {
+    width: fit-content
 }
 
 .quiz-footer {
