--- a/views/quiz-done.ejs
+++ b/views/quiz-done.ejs
@@ -11,23 +11,33 @@
         <section class="quiz-main">
             <h1 id="count" style="display:none;"><%- questionIndex %></h1>
             <h1 id="maxCount" style="display:none;"><%- questionIndexMax %></h1>
-            <cite><h1><%- questionIndex %>. <%- question %></h1></cite>
+            <cite><h1><%- questionIndex + 1 %>. <%- question %></h1></cite>
             <section class="quiz-answers">
                 <div>
                     <h1>Character:</h1>
-                    <% possibleCharacters.forEach(character=> { 
-                        let correct = quizReview.correctAnswers.find(a => a._id == character._id);
-                        let wrongSelected = character.name == quizReview.userAnswers[1];
-                        %>
-                    <div class="quiz-character-option <%= correct ? "quiz-correct-option" : wrongSelected ? "quiz-wrong-option" : ""%>"><h2><%- character.name %></h2></div>
+                    <% possibleCharacters.forEach(character=> { %>
+                    <% let correct = quizReview.correctAnswers.find(a => a._id == character._id);%>
+                    <% let selected = character.name == quizReview.userAnswers[1];%>
+                       
+                    <div class="flex evenspace quiz-character-option <%= correct ? "quiz-correct-option" : selected ? "quiz-wrong-option" : ""%>">
+                        <h2><%- character.name %></h2> 
+                        <h2><%= correct && selected ? "+0.5" : "" %></h2>
+                    </div>
+
                     <% }); %>
                 </div>
+               
                 <div>
                     <h1>Movie:</h1>
-                    <% possibleMovies.forEach(movie=> { 
-                        let correct = quizReview.correctAnswers.find(a => a._id == movie._id);
-                        let wrongSelected = movie.name == quizReview.userAnswers[0]; %>
-                    <div class="quiz-movie-option <%= correct ? "quiz-correct-option" : wrongSelected ? "quiz-wrong-option" : ""%>"><h2><%- movie.name %></h2></div>
+                    <% possibleMovies.forEach(movie=> { %>
+                    <% let correct = quizReview.correctAnswers.find(a => a._id == movie._id);%>
+                    <% let selected = movie.name == quizReview.userAnswers[0]; %>
+                    
+                    <div class="flex evenspace quiz-movie-option <%= correct ? "quiz-correct-option" : selected ? "quiz-wrong-option" : ""%>">
+                        <h2><%- movie.name %></h2>
+                        <h2><%= correct && selected ? "+0.5" : "" %></h2>
+                    </div>
+
                     <% }); %>
                 </div>
             </section>
