Veel geleerd, pc lag het raam bijna uit. Maar het werkt

--- a/views/quiz-done.ejs
+++ b/views/quiz-done.ejs
@@ -48,7 +48,7 @@
                 <input type="hidden" name="prevQuestion">
                 <input type="submit" value="Vorige" id="prevSub">
             </form>
-            <h2 class="quiz-total-score">Totale Score: <%- score %> / <%- quizReview.answeredQuestionsMap.size %></h2>
+            <h2 class="quiz-total-score">Totale Score: <%- score %> / <%- quizReview.answeredQuestionsSize %></h2>
             <form action="/quiz" method="post">
                 <input type="hidden" name="nextQuestion">
                 <input type="submit" value="Volgende" id="nextSub">
