--- a/views/quiz-begin.ejs
+++ b/views/quiz-begin.ejs
@@ -6,7 +6,7 @@
 
         <section class="quiz-main">
             <form action="/quiz" method="post" class="start-quiz">
-                <input type="hidden" value="true" name="startQuiz" />
+                <input type="hidden" value="start" name="startQuiz" />
                 <button type="submit" class="">START QUIZ</button>
             </form>
         </section>
