afbeelding smigel en containers toegevoegd

--- a/views/blacklist.ejs
+++ b/views/blacklist.ejs
@@ -1,4 +1,4 @@
- <main>
+ <main id="blacklist">
          <h1>Blacklist</h1>
         <ul>
         <li><blockquote>“So many books, so little time.”</blockquote></li>
