--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -1,4 +1,4 @@
-<main>
+<main id= "favorieten">
     <img src="assets/images/favorite-quotes.jpg" alt="Logo">
     <ul>Dit zijn alle Favoriete quotes:
         <li><blockquote>“You shall not pass” - <a href="https://lotr.fandom.com/wiki/Gandalf">Gandalf</a></blockquote></li>
