--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -203,5 +203,15 @@ footer {
 }
 
 #quiz-footer #prevSub {
-   
+  
+}
+#favorieten_container{
+
+}
+#blacklist_container{
+
+}
+#error404_container{
+height: 500;
+width: 500;
 }
