--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,3 +1,3 @@
-<main id=" error404">
-    <img src="assets/images/lost.jpg" alt="" height="600" width="600">
+<main id=" error404_container">
+    <img src="assets/images/lost.jpg" alt="">
 </main>
