--- a/views/blacklist.ejs
+++ b/views/blacklist.ejs
@@ -1,4 +1,4 @@
-<main>
+<main id = "blacklist_container">
         <ul>
         <%blacklistedQuotes.foreach(quote => %>
         <li><blockquote>“<%= quote %>”</blockquote></li>
