--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -212,6 +212,9 @@ footer {
 
 }
 #error404_container img{
-height: 100%;
-width: 100%;
+height: 40%;
+width: 40%;
+}
+#error404_container{
+background-image: url(Map-of-Middle-Earth.jpg);
 }
