--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -214,6 +214,8 @@ footer {
 #error404_container img{
 height: 40%;
 width: 40%;
+margin:0 auto;
+display: block;
 }
 #error404_container{
 background-image: url(Map-of-Middle-Earth.jpg);
