--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,8 +1,10 @@
-<h1>Choose your project</h1>
+<main>
+    <h1>Choose your project</h1>
 
 <a href="./index"><input type="image" src="assets/images/logoLOTR.png" style="border: double;" height="100" width="200"/></a>
 <a href="./404"><input type="image" src="assets/images/fifa.png" style="border: double;" height="100" width="200"/></a>
 <a href="./404"><input type="image" src="assets/images/fortnite.jpg" style="border: double;" height="100" width="200"/></a>
-<a href="./404"><input type="image" src="assets/images/LEGO MASTERS.jpg.png" style="border: double;" height="100" width="200"/></a>
+<a href="./404"><input type="image" src="assets/images/LEGO MASTERS.jpg" style="border: double;" height="100" width="200"/></a>
 <a href="./404"><input type="image" src="assets/images/Magic_The_Gathering.png" style="border: double;" height="100" width="200"/></a>
 <a href="./404"><input type="image" src="assets/images/nationalebank.png" style="border: double;" height="100" width="200"/></a>
+</main>
