--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,7 @@
     <img src="assets/images/logoLOTR.png" alt="Logo">
     <nav>
         <ul>
-            <li><a href="./" class="">Home</a></li>
+            <li><a href="./index" class="">Home</a></li>
             <li><a href="./quiz" class="">Quiz</a></li>
             <li><a href="./favorites" class="">Favorites</a></li>
             <li><a href="./blacklist" class="">Blacklist</a></li>
